--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # basic options
 title: 22
-author: Mingya
+author: Smart Guy
 email: your-email@domain.com
 description: A wonderful site that captures the jounery of my life after university
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: potus
+github_username:  evanwill
 
 # Build settings
 markdown: kramdown
