--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # basic options
-title: 22
+title: New-awesome-blog
 author: Smart Guy
 email: your-email@domain.com
 description: A wonderful site that captures the jounery of my life after university
