--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ github_username:  evanwill
 
 # Build settings
 markdown: kramdown
-theme: Strongly Typed
+theme: techieshark/strongly-typed-jekyelled
