--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # basic options
 title: Twenty-Two 
 author: Mingya 
-email: your-email@domain.com
 description: A blog to caputre the jounery of my life after university 
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: @Mingah_02
+github_username:  zhongmingya
 
 # Build settings
 markdown: kramdown
