--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Twenty-Two 
 author: Mingya 
 description: A blog to caputre the jounery of my life after university 
-twitter_username: @Mingah_02
+twitter_username: twitter
 github_username:  zhongmingya
 
 # Build settings
