--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ instagram:          default
 github:             default
 
 # personal
-location:           Los Angeles, CA
+location:           New York, NY
 phone:              310-318-5555
 email:              info@default.com
 
